--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>todoリスト</title>
-    <link rel="stylesheet" href="./todo.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- <button id="toggle-dark">🌙 ダークモード切替</button>
-    <div class="dark-mode-toggle">
-        <label class = "switch">
-            <input type="checkbox" id="toggle-dark">
-            <span class="slider"></span>
-        </label>
-        <span class="toggle-label">🌙 ダークモード</span> -->
-    <!-- </div> -->
 <div class="container">
     <div class="dark-mode-toggle">
         <label class = "switch">
@@ -33,13 +25,14 @@
 
     <div class="filter-buttons">
         <button id="filter-all">すべて</button>
+         <button id="filter-completed">完了</button>
         <button id="filter-active">未完了</button>
-        <button id="filter-completed">完了</button>
+
     </div>
 
 <ul id="todo-list"></ul>
 </div>
-<script src="./todo.js"></script>
+<script src="./script.js"></script>
 
 </body>
 </html>
